@@ -357,7 +357,7 @@ static bool test_instruction (hashcat_ctx_t *hashcat_ctx, cl_context context, cl
   #endif
   #endif
 
-  CL_rc = ocl->clBuildProgram (program, 1, &device, "-cl-std=CL1.0 -Werror", NULL, NULL); // do not use the wrapper to avoid the error message
+  CL_rc = ocl->clBuildProgram (program, 1, &device, "-Werror", NULL, NULL); // do not use the wrapper to avoid the error message
 
   #ifndef DEBUG
   #ifndef _WIN
@@ -4940,9 +4940,9 @@ int opencl_session_begin (hashcat_ctx_t *hashcat_ctx)
     int build_options_len = 0;
 
     #if defined (_WIN)
-    build_options_len += snprintf (build_options_buf + build_options_len, build_options_sz - build_options_len, "-D KERNEL_STATIC -cl-std=CL1.2 -I OpenCL -I \"%s\" ", folder_config->cpath_real);
+    build_options_len += snprintf (build_options_buf + build_options_len, build_options_sz - build_options_len, "-D KERNEL_STATIC -I OpenCL -I \"%s\" ", folder_config->cpath_real);
     #else
-    build_options_len += snprintf (build_options_buf + build_options_len, build_options_sz - build_options_len, "-D KERNEL_STATIC -cl-std=CL1.2 -I OpenCL -I %s ", folder_config->cpath_real);
+    build_options_len += snprintf (build_options_buf + build_options_len, build_options_sz - build_options_len, "-D KERNEL_STATIC -I OpenCL -I %s ", folder_config->cpath_real);
     #endif
 
     // we don't have sm_* on vendors not NV but it doesn't matter
